# umara-image-search

./: .env.example  .gitignore  README.md  backfill.py  config.py  main.py  pyproject.toml
api/: app.py
embedding/: embedder.py
ingestion/: loader.py
search/: searcher.py
